Добавил нескоько вариантов отбора и скрещивания. Исправил ошибки (скрещенная популяция не сохранялась и др).